--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     },
     "engine": "node >= 0.10.21",
     "dependencies": {
-        "when": "2.6.0",
-        "swig": "1.2.2",
+        "compression": "^1.8.1",
+        "express": "^5.1.0",
         "mkdirp": "0.3.5",
-        "express": "3.4.4"
+        "morgan": "^1.10.1",
+        "swig": "1.2.2",
+        "topojson-simplify": "^3.0.3",
+        "when": "2.6.0"
     },
     "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-jshint": "~0.7.1"
+        "grunt": "^1.6.1",
+        "grunt-contrib-jshint": "^3.2.0"
     }
 }
